Fix et terminaison de l'animation de roll/ text-overflow en :hover

--- a/sass/StylesheetSCSS/page.scss
+++ b/sass/StylesheetSCSS/page.scss
@@ -8,6 +8,7 @@
         margin: 0;
         padding: 0;
         font-family: Roboto, Arial, Helvetica, sans-serif;
+        scroll-behavior:smooth;
 
         a{
             text-decoration: none;
@@ -94,80 +95,75 @@
         }
         /*** ARTICLE OF MENU SELECTOR ***/
         article{
+            background-color: #fff;
             display: flex;
-            width: 100%;
-            height: 4rem;
-            background-color: white;
-            box-shadow: 0px 0px 10px #d6d6d6;
             border-radius: 1rem;
-            margin: 1.2rem auto;
+            margin: 1rem 0rem;
+            overflow: hidden;
             cursor: pointer;
+            height: 64px;
             /*** STRING CONTENT OF ARTICLE MENU ***/
             .menuContent{
-                position: absolute;
-            }
-
-            p{
-                display: flex;
-                flex-direction: column;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
                 padding: 1rem;
-                font-weight: 400;
-                margin: 0;
-
-                span{
+                width: 100%;
+            
+                h4{
+                    flex-direction: column;
+                    font-weight: 400;
+                    margin: 0;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                }
+                p{
                     font-size: smaller;
                     font-weight: 300;
+                    margin: 0;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
                 }
             }
         }
     }
     /*** VALIDATOR OF SELECTION ICON & ANIMATION ***/
-    .checker{
-            display: flex;
-            width: 100%;
-            position: relative;
-            cursor: pointer;
-            height: 64px;
-            overflow: hidden;
+    .checkin{
+        display: flex;
+        justify-content: flex-end;
+        animation: slideout 0.5s both;
+        width: 30px;
+        h4{
+            margin: 1rem;
+            line-height: 64px;
+        }
+
+        i{
+            font-size: 2rem;
             border-radius: 0rem 1rem 1rem 0rem;
-
-        .checkin{
-            display: flex;
-            justify-content: flex-end;
             position: relative;
-            width: 100%;
-            animation: slideout 1s both;
-            h4{
-                margin: 1rem;
-                line-height: 64px;
-            }
-
-            &:hover{
-                animation: slidein 1s forwards;
-            }
-            i{
-                font-size: 2rem;
-                border-radius: 0rem 1rem 1rem 0rem;
-                position: relative;
-                padding: 0;
-                padding: 0rem 1rem;
-                display: flex;
-                margin: 0;
-                justify-content: flex-end;
-                line-height: 64px;
-                color: white;
-                background: $tertiary;
-                height: 64px;
-            }
+            padding: 0;
+            padding: 0rem 1rem;
+            display: flex;
+            margin: 0;
+            justify-content: flex-end;
+            line-height: 64px;
+            color: white;
+            background: $tertiary;
+            height: 64px;
         }
     }
     /*** SETTINGS OF ROLLING CHECK ICON ***/
-    article:hover{
-        .checker{
-            display: block;
-            overflow: hidden;
+    article{
+
+        &:hover{
+            .checkin {
+                animation: slidein 0.5s forwards;
+            }
             .checkin i::before{
-                animation: roll 1s;
+                animation: roll 0.5s;
             }
         }
     }
